[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wawona"
version = "1.2.1"
authors = [
  { name="yuzawa-san", email="jtyuzawa+wawona@gmail.com" },
]
license = {text = "MIT License"}
description = "Easily make office reservations in sequoia from the command line."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Operating System :: OS Independent",
  "Environment :: Console",
]
dependencies = [
  "requests>=2.31.0",
  "inquirer>=3.2.4",
  "texttable>=1.7.0",
  "keyring>=25.2.1",
  "pytz>=2024.1",
  "selenium>=4.21.0",
]

[project.scripts]
wawona = "wawona.wawona:run"

[project.urls]
Homepage = "https://github.com/yuzawa-san/wawona"
Changelog = "https://github.com/yuzawa-san/wawona/releases"
Issues = "https://github.com/yuzawa-san/wawona/issues"
CI = "https://github.com/yuzawa-san/wawona/actions"
Documentation = "https://github.com/yuzawa-san/wawona/blob/master/README.md"
Repository = "https://github.com/yuzawa-san/wawona.git"
Funding = "http://paypal.me/yuzawasan"